--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
-name: helloworld # 插件唯一识别名，以 astrbot_plugin_ 前缀开头
-display_name: helloworld # 用于展示的名字，可以是方便人类阅读的名字（需要版本 >= v4.5.0，低版本不会报错，请放心填写）
-desc: AstrBot 插件示例。 # 插件简短描述
-version: v1.3.0 # 插件版本号。格式：v1.1.1 或者 v1.1
-author: Soulter # 作者
-repo: https://github.com/Soulter/helloworld # 插件的仓库地址
+name: welcome_llm # 插件唯一识别名，建议小写、无空格
+display_name: 入群欢迎 LLM # 展示名称（>= v4.5.0 生效）
+desc: 新成员入群时，通过 LLM 生成欢迎词并 @ 新成员，兼容人格设定与可编辑提示词。 # 简短描述
+version: v1.0.0 # 版本号
+author: IACER # 作者
+repo: https://github.com/iACER1/welcome # 仓库地址（可选）
